[package]
name = "rotated-grid"
description = "Rotated grid calculations for halftones and more"
version = "0.1.0"
edition = "2021"
keywords = ["halftone", "image-processing", "grid"]
repository = "https://github.com/sunsided/halftone-grid"
license-file = "LICENSE.md"

[dependencies]

[dev-dependencies]
opencv = { version = "0.82.1", default-features = false, features = ["imgproc", "imgcodecs", "highgui"] }
