[package]
name = "rotated-grid"
description = "Rotated grid calculations for halftones and more"
version = "0.0.1"
edition = "2021"
keywords = ["halftone", "image-processing", "grid"]
categories = ["multimedia::images"]
repository = "https://github.com/sunsided/rotated-grid"
license-file = "LICENSE.md"
readme = "README.md"
rust-version = "1.56"

[dependencies]

[dev-dependencies]
opencv = { version = "0.82.1", default-features = false, features = ["imgproc", "imgcodecs", "highgui"] }
