[package]
name = "rotated-grid"
description = "Rotated grid calculations for CMYK halftone dithering and more"
version = "0.1.1"
edition = "2021"
keywords = ["halftone", "image-processing", "grid"]
categories = ["multimedia::images", "mathematics"]
repository = "https://github.com/sunsided/rotated-grid"
license = "EUPL-1.2"
readme = "../../README.md"
rust-version = "1.59"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
