[package]
name = "cmyk"
description = "CMYK halftone dithering example"
version = "0.1.0"
edition = "2021"
keywords = ["halftone", "image-processing", "grid"]
repository = "https://github.com/sunsided/rotated-grid"
publish = false

[dependencies]
rotated-grid = { path = "../../crates/rotated-grid" }
opencv = { version = "0.82.1", default-features = false, features = ["imgproc", "imgcodecs", "highgui"] }
